--- a/index.html
+++ b/index.html
@@ -7,17 +7,17 @@
     <form>
       <fieldset>
         <legend>Dogs Available for Adoption</legend>
-        <label for="cityOrZipForm">U.S. City or Zip Code:</label>
-        <input type="text" name="cityOrZip" id="cityOrZip">
-        <input type="submit" id="inputSubmit">
+        <label for="dog">dog:</label>
+       // <input type="text" name="dog" id="dog">
+        //<input type="submit" id="inputSubmit">
       </fieldset>
     </form>
     <div>
       <h2>Result</h2>
       <ul>
-        <li><span>City:</span><span id="city"></span></li>
-        <li><span>Type:</span><span id="type"></span></li>
-        <li><span>Breed:</span><span id="breed"></span></li>
+        <li><span>Dog:</span><span id="dog"></span></li>
+       // <li><span>Type:</span><span id="type"></span></li>
+       // <li><span>Breed:</span><span id="breed"></span></li>
         
       </ul>
     </div>
