--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
       <fieldset>
         <legend>Dogs Available for Adoption</legend>
         <label for="dog">dog:</label>
-       // <input type="text" name="dog" id="dog">
-        //<input type="submit" id="inputSubmit">
+        <input type="text" name="dog" id="dog">
+       <input type="submit" id="inputSubmit">
       </fieldset>
     </form>
     <div>
       <h2>Result</h2>
       <ul>
         <li><span>Dog:</span><span id="dog"></span></li>
-       // <li><span>Type:</span><span id="type"></span></li>
-       // <li><span>Breed:</span><span id="breed"></span></li>
+       <li><span>Type:</span><span id="type"></span></li>
+       <li><span>Breed:</span><span id="breed"></span></li>
         
       </ul>
     </div>
