--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
       <h2>Result</h2>
       <ul>
-        <li><span>Dog:</span><span id="dog"></span></li>
+        <li><span>Dog:</span><span id="name"></span></li>
        <li><span>Type:</span><span id="type"></span></li>
        <li><span>Breed:</span><span id="breed"></span></li>
         
