--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <form>
       <fieldset>
         <legend>Dogs Available for Adoption</legend>
-        <label for="dog">dog:</label>
+        <label for="dogForm">dog:</label>
         <input type="text" name="dog" id="dog">
        <input type="submit" id="inputSubmit">
       </fieldset>
@@ -16,8 +16,7 @@
       <h2>Result</h2>
       <ul>
         <li><span>Dog:</span><span id="name"></span></li>
-       <li><span>Type:</span><span id="type"></span></li>
-       <li><span>Breed:</span><span id="breed"></span></li>
+       <
         
       </ul>
     </div>
