--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div>
       <h2>Result</h2>
       <ul>
-        <li><span>Dog:</span><span id="name"></span></li>
+        <img><span>Dog:</span><span id="name"></span></img>
        
         
       </ul>
