--- a/index.html
+++ b/index.html
@@ -19,7 +19,15 @@
         <li><span>General Description:</span><span id="description"></span></li>
         <li><span>Temperature (degs F):</span><span id="temperature"></span></li>
         <li><span>Humidity %: </span><span id="humidity"></span></li>
-      </ul>
+            </ul>
+      
+      <script>
+        var walkTemperature = response.main.temp;
+        if(walkTemperature > 90.0)
+        {
+          alert("it's too hot to walk the dog");
+        }
+      </script>
     </div>
   </body>
 </html>
