--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         <li><span>General Description:</span><span id="description"></span></li>
         <li><span>Temperature (degs F):</span><span id="temperature"></span></li>
         <li><span>Humidity %: </span><span id="humidity"></span></li>
+        <li><span> This temperature is above 90 degrees. Don't walk the dog.):</span><span id="temperature"></span></li>
+         
             </ul>
       
    
