--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><span> This temperature is above 90 degrees. Don't walk the dog.</span><span id="temperature"></span></li>
          
             </ul>
+      <p id="temperature"></p>
       
    
     </div>
