--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <li><span>Humidity %: </span><span id="humidity"></span></li>
       
             </ul>
-      <p align = "center" id="temp">is too hot to walk the dog!</p>
+      <p align = "center" id="temp"></p>
       
    
     </div>
