--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       
             </ul>
       <p align = "center" id="temp"></p>
+      <p align - "center" id="tooHot"></p>
       
    
     </div>
